DOC: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -21,13 +21,17 @@
 
 [#] Покупка ТМ: Модуль платежной системы XSolla
     Модуль payment_xsolla_currency v1b0
-    Реализован протокол "Виртуальная валюта" (без отката платежей)
-    Поддержка плагина PayStation
+    Реализован протокол XSolla "Виртуальная валюта" (без отката платежей)
+    Поддержка плагина XSolla PayStation
 
 [#] Премиумный аккаунт
-    Модуль player_premium v1a0
-    Базовая поддержка основных функций модуля
-    Добавлен интерфейс покупки премиумного аккаунта
+    Премиумный аккаунт покупается игроком за ТМ
+    Имеется 5 уровней премиума
+    Премиумный аккаунт дает  бонус,  эквивалентный  своему  уровню,  к  уровням
+    технологий и Наемников (не Губернаторов!)  Империи,  а  так  же  к  уровням
+    зданий на планетах
+    Ник обладателя премиумного аккаунта выделяется в чате отдельным стилем  (по
+    умолчанию - желтым цветом)
 
 [!] Покупка ТМ
     Поддержка платежных модулей: таблица платежей,  базовые  настройки,  строки
@@ -37,20 +41,20 @@
     Поддержка методов 'LINK', 'GET' и 'POST' в системах платежа
 [!] Админка: Воплощение
     Теперь можно Воплотиться в любого игрока, посмотреть  игру  его  глазами  и
-    поуправлять игрой его... эээ... интерфейсом!
+    поуправлять игрой его ру... эээ... интерфейсом!
     Воплощение доступно только Администраторам сервера
     Воплотиться можно только в игрока меньшего уровня - т.е. нельзя Воплотиться
     в такого же Администратора
     Вложенные  Воплощения   недопустимы:   нельзя   Воплотиться,   будучи   уже
-    Воплощенным в кого-то. Развоплотитесь сначала
+    Воплощенным в кого-то. Сначала Развоплотитесь
     Для Воплощения используйте соответствующую иконку в "Списке игроков"
     При Воплощении изменяется только  onlinetime  пользователя.  Вся  остальная
     информация (IP, User-agent итд) сохраняется
     Для Развоплощения используйте соответствующий пункт меню или "Выход"
-    Если на аккаунте игрока есть ошибки  или  игрок  находится  в  отпуске,  то
-    попытке Воплощения будет выведено сообщение об ошибке/об  отпуске,  которое
-    увидел бы игрок на вашем  месте.  Обновление  страницы  вернет  вас  в  ваш
-    аккаунт
+    Если на аккаунте игрока есть ошибки,  или  игрок  заблокировае,  или  игрок
+    находится в отпуске, то попытке  Воплощения  будет  выведено  сообщение  об
+    ошибке/блокировке/отпуске,  которое  увидел  бы  игрок  на   вашем   месте.
+    Обновление страницы вернет вас в ваш аккаунт
     После штатного Развоплощения (т.е. из меню, а не при ошибке и не из  игрока
     в отпуске) Администратора возвращает на страницу списка игроков
     ВНИМАНИЕ! Перед использованием Воплощения почистите куки в браузере!  Из-за
@@ -64,7 +68,7 @@
     Чертеж  покупается  на  Империю,  после  чего  указанный  юнит  доступен  к
     производству на всех планетах
     Чертеж является перманентым
-    Чертежи  заменяют  Наемников  в  требованиях к постройке
+    Чертежи заменяют Наемников в требованиях к постройке
     Наемники "Разрушитель" и "Ассасин" сконвертированы соответственно в "Чертеж
     ЗС" и "Чертеж СН". Остальные четрежи надо покупать самостоятельно
 [!] День Рождения: Добавлена подсистема подарков на ДР игрока
@@ -124,16 +128,29 @@
 
 [+] Локализация: Добавлена система отката языков в случае, если включаемый файл
     не найден в указанном месте движка/для указанного языка
-[+] Губернаторы
+[~] Офицеры: Академик, Фортификатор, Инженер
     Теперь Фортификатор добавляет +1 слот к  очереди  постройки  оборонительных
     сооружений за каждый уровень. Вследствие этого фактор Губернатора измененен
     с 1.00 до 1.25. Текущие Фортификаторы остались без изменений
     Теперь Инженер добавляет +1 слот к очереди постройки кораблей и  зданий  за
     каждый уровень. Кроме того, бонус к скорости строительства зданий  увеличен
-    до 10%. Вследствие этого максимальный уровень уменьшен до 8,  БС  увеличена
-    до 500, фактор увеличен до 1.65. У нанятых инженеров уровень понижен в  два
-    раза с округлением в большую сторону. В целом  это  означает,  что  Инженер
-    стоит дешевле в пересчете на эффективный уровень.
+    до 10%. Вследствие этого БС увеличена до 500, фактор увеличен  до  1.65.  У
+    нанятых инженеров уровень понижен  в  два  раза  с  округлением  в  большую
+    сторону. В целом это означает, что Инженер стоит  дешевле  в  пересчете  на
+    эффективный уровень
+    Изменена логика работы Академика, Фортификатора и Инженера. Все они  влияют
+    на скорость постройки юнитов, однако раньше  зависимость  была  практически
+    экспоненциальная. Вдобавок слишком большой бонус от Академика в  Альянсе  в
+    сочетании с полностью  прокачанным  Наемником  у  игрока  мог  приводить  к
+    артефактам в работе исследований
+    Теперь бонус указанных офицеров - это процент увеличения скорости постройки
+    соответствующих  юнитов,  а  не  процент,  на  который  уменьшается   время
+    постройки. Т.е. это - слагаемое в знаменатели дроби. Если  говорить  совсем
+    просто: 100% бонуса от офицера уменьшают время постройки юнита  в  2  раза,
+    200% - в три раза, 300% - в четыре раза и так далее
+    В связи с данными изменениями  сняты  ограничения  на  максимальные  уровни
+    Фортификатора и Инженера. Кроме того, бонус Академика увеличен с 5% до 10%,
+    а его максимальный уровень - до 30
 [+] MVC: Базовая поддержка MVC
 
 [~] Альянсы: Немного оптимизирован код страницы Управления Альянсом
@@ -173,21 +190,6 @@
     автоматически развоплощается
 [~] Меню
     Пункты "Технология" и "Квесты" перемещены в раздел "Информация"
-[~] Офицеры: Академик, Фортификатор, Инженер
-    Изменена логика работы Академика, Фортификатора и Инженера. Все они  влияют
-    на скорость постройки юнитов, однако раньше  зависимость  была  практически
-    экспоненциальная. Вдобавок слишком большой бонус от Академика в  Альянсе  в
-    сочетании с полностью  прокачанным  Наемником  у  игрока  мог  приводить  к
-    артефактам в работе исследований
-    Теперь бонус указанных офицеров - это процент увеличения скорости постройки
-    соответствующих  юнитов,  а  не  процент,  на  который  уменьшается   время
-    постройки. Т.е. это - слагаемое в знаменатели дроби. Если  говорить  совсем
-    просто: 100% бонуса от офицера уменьшают время постройки юнита  в  2  раза,
-    200% - в три раза, 300% - в четыре раза и так далее
-    В связи с данными изменениями  сняты  ограничения  на  максимальные  уровни
-    Фортификатора и Инженера. Кроме того, бонус Академика увеличен с 5% до 10%,
-    а его максимальный уровень - до 30
-[~] Чат: Ник премиумного аккаунта выделяется (по умолчанию - желтым цветом)
 
 [%] Своз ресурсов: Исправлена ошибка со смещением цветового кодирования емкости
     транспортов на одну строку вниз
@@ -265,6 +267,10 @@
     построек зданий и верфи/обороны задается переменными из таблицы `config`  -
     соотвественно 'server_que_length_structures' и  'server_que_length_hangar'.
     По умолчанию их значения равны 5
+[@] Классы
+    Новый метод  'assign_recursive'  класса  "template"  -  позволяет  в  одном
+    операторе заполнить  как  переменные  темплейта,  так  и  блоки  -  включая
+    вложенные
 [@] Скины
     Изменена  организация  CSS-файлов.  Файл   "formate.css"   переименован   в
     "skin.css". К нему присоединен в конце файл  "default.css".  Таким  образом
