UNI-feat-34a20: Players can buy additional sectors on planet for DM. Also misc changes

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a19#
+Текущая версия #34a20#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -25,6 +25,7 @@
     Поддержка плагина XSolla PayStation
 
 [#] Премиумный аккаунт
+    Модуль player_premium v1a2
     Премиумный аккаунт покупается игроком за ТМ
     Имеется 5 уровней премиума
     Премиумный аккаунт дает  бонус,  эквивалентный  своему  уровню,  к  уровням
@@ -125,6 +126,17 @@
     используется информация из записей игроков (т.е. актуальная  информация  на
     момент просмотра статистики), поэтому изменение для данных типов статистики
     всегда будет равно 0
+[!] Покупка секторов на планете
+    Теперь можно за ТМ докупать дополнительные сектора на планете
+    Сектора покупаются по 1 штуке
+    Стоимость сектора для планеты -  геометрическая  прогрессия  с  количеством
+    секторов в качестве номера члена, БС = 1000 и Ф = 1.01
+    Ориентировочная стоимость покупи  1  сектора  на  планете  составляет:  для
+    планеты размером 100 секторов - 2678  ТМ,  150  секторов  -  4404  ТМ,  163
+    сектора - 5013 ТМ, 200 секторов - 7244 ТМ, 250 секторов  -  11913  ТМ,  300
+    секторов - 19493 ТМ, 330 секторов - 26508 ТМ
+[!] Строительство
+    Минимальное время постройки/исследования юнита уменьшено до 1 секунды
 
 [+] Локализация: Добавлена система отката языков в случае, если включаемый файл
     не найден в указанном месте движка/для указанного языка
@@ -190,6 +202,11 @@
     автоматически развоплощается
 [~] Меню
     Пункты "Технология" и "Квесты" перемещены в раздел "Информация"
+[~] Новости: Заголовок "Новости" таблицы актуальных  новостей  теперь  является
+    ссылкой - клик на него раскрывает список всех новостей
+[~] Обзор планеты
+    Переформатирован вывод статуса Ворот для луны
+    Убран таймер исследований вследствие его полной бессмысленности
 
 [%] Своз ресурсов: Исправлена ошибка со смещением цветового кодирования емкости
     транспортов на одну строку вниз
