UNI-feat-34a20.1: Sectors can be bought now on 3 different screens

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a20#
+Текущая версия #34a20.1#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -127,8 +127,10 @@
     момент просмотра статистики), поэтому изменение для данных типов статистики
     всегда будет равно 0
 [!] Покупка секторов на планете
-    Теперь можно за ТМ докупать дополнительные сектора на планете
-    Сектора покупаются по 1 штуке
+    Теперь можно за ТМ докупать дополнительные сектора на планете - один сектор
+    за раз, максимальное количество секторов не ограничено
+    Cектор можно купить в нескольких местах: в "Обзоре планеты", в  "Управлении
+    планетой" и на экране строительства зданий
     Стоимость сектора для планеты -  геометрическая  прогрессия  с  количеством
     секторов в качестве номера члена, БС = 1000 и Ф = 1.01
     Ориентировочная стоимость покупи  1  сектора  на  планете  составляет:  для
