MSG-fix-34a20.2: Fixed error when trying to send messages with empty recipient

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a20.1#
+Текущая версия #34a20.2#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -241,6 +241,7 @@
 [%] Исправлена ошибка вычисления стоимости Наемников
 [%] Исследования: Исправлена ошибка расчета времени для исследований Альянса  в
     случае, если Альянсу известна технология МИС
+[%] Сообщения: Исправлена ошибка при попытке отправить сообщение без адресата
 
 [@] Документация: readme преобразован в UTF8
 [@] Добавлена компенсация  работы  механизма  Magic  Quotes.  Подробнее  -  см.
