DOC-feat-35b0: readme editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -7,11 +7,11 @@
 [~] Изменено/Changed functions
 [%] Исправление - багфикс/Bugfixes
 [@] Эта информация будет  интересна  только  админам  и/или  разработчикам/This
-    information is only for administrators and/or developers 
+    information is only for administrators and/or developers
 
 
 
-Текущая версия #34a20.2#
+Текущая версия #34b0#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -34,6 +34,7 @@
     Ник обладателя премиумного аккаунта выделяется в чате отдельным стилем  (по
     умолчанию - желтым цветом)
 
+[!] Файл "/docs/release.txt" приведен в соответствие с актуальной информацией
 [!] Покупка ТМ
     Поддержка платежных модулей: таблица платежей,  базовые  настройки,  строки
     локализации и константы
@@ -573,7 +574,7 @@ Project "SuperNova.WS" Release 33 "Women Day v2012!"
     минификатор вызывается  только  один  раз  при  компиляции  кода  и  дальше
     кэшируется   уменьшенный   скомпилированный   темплейт,    что    исключает
     необходимость в повторном вызове минификатора. Этим он  выгодно  отличается
-    от  минификаторов, работающих на уровне сессии через ob_hanler() 
+    от  минификаторов, работающих на уровне сессии через ob_hanler()
     В  среднем  по  сайту  минификатор   дает   выигрыш   порядка   7-8%%   при
     незначительном падении производительности.
     По  умолчанию  минификатор  отключен.  Включить  его  можно  в  админке   в
@@ -851,11 +852,11 @@ Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
     2. По умолчанию БС = 3000, Фактор = 1
     3. Максимальный уровень карго-мастера увеличен до 20
     4. Упразднены  наемники  Геолог,   Энергетик,   Архиктектор,   Конструктор,
-    Фортификатор, Разрушитель - их функции переданы губернаторам (см. ниже) 
+    Фортификатор, Разрушитель - их функции переданы губернаторам (см. ниже)
     5. Вся ТМ за упраздненных наемников возвернута игрокам
     6. Реорганизованы ветки развития наемников
        "Шахтерская" теперь выглядит как "Карго-мастер" - "Шпион" - "Академик" -
-       "Разрушитель" 
+       "Разрушитель"
        "Рейдерская" теперь выглядит как "Адмирал" - "Координатор" - "Навигатор"
        - "Ассасин"
     7. Балансировка губернаторов проведена из  расчета  на  "среднего  игрока",
@@ -928,7 +929,7 @@ Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
 [+] Список  планет:  На   изображения  планет   добавлен   индикатор   текущего
     губернатора и его уровень
 [+] Инфо/Флот: Показываются текущие характеристики корабля (с учетом  наемников
-    и технологий) 
+    и технологий)
 [+] Новости: Добавлена лента новостей на  страницу  обзора  планеты.  Выводятся
     только  последние  непрочитанные  новости.  Количество  выводимых  новостей
     настраивается на сервере (по умолчанию - 3)
@@ -975,7 +976,7 @@ Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
 
 [@] SYS: Устаревшие функции заменены актуальными аналогами:
       int_buildCounter => tpl_parse_planet
-      GetTargetDistance, GetMissionDuration, GetFleetConsumption => 
+      GetTargetDistance, GetMissionDuration, GetFleetConsumption =>
         flt_travel_data
       GetShipConsumption, get_ship_speed => get_ship_data
       GetFleetMaxSpeed => flt_fleet_speed
@@ -1007,7 +1008,7 @@ Project "SuperNova.WS" Release 30d4 "Emailing phalanx research antiSSF"
 [!] Документация: Добавлен файл с английской версией  инструкции  по  установке
     /docs/install-en.txt (google translated)
 [!] Локализация: Доступен выбор языка до входа в игру на страницах регистрации,
-    логина, восстановления забытого пароля. 
+    логина, восстановления забытого пароля.
     Все доступные до входа в игру страницы (включая статистику, банлист, список
     контактов, настройки вселенной итд) используют  выбранный  при  регистрации
     язык.
@@ -1029,12 +1030,12 @@ Project "SuperNova.WS" Release 30 "Emailing phalanx research antiSSF"
     появляются дополнительные опции для всех категорий входящих сообщений
 [!] Фаланга: Переписан вывод фаланги с использованием  функций  СН.  Теперь  он
     выглядит аналогично списку  событий  флота  на  странице  "Обзор  планеты".
-    Алгоритм работы - почти оффовский: 
+    Алгоритм работы - почти оффовский:
     1. Показываются все флоты, летящие от сканируемой планеты или же к ней
     2. Полет A --> B
        a) скан B => можно увидеть время прибытия флота
        b) скан A => можно увидеть время возвращения флота (но не  его  прибытия
-       на B) 
+       на B)
     3. Возвращение B --> A
        a) скан B => не видно ничего
        b) скан A => виден возвращающийся флот
@@ -1076,7 +1077,7 @@ Project "SuperNova.WS" Release 30 "Emailing phalanx research antiSSF"
     флоте и сколько кораблей в каждой группе
     Больше 8 - видно точное количество ресурсов в трюмах кораблей
     Больше 10 - виден количественный состав флота
-[+] Сообщения:  Изменена  цветовая  кодировка  сообщений.  
+[+] Сообщения:  Изменена  цветовая  кодировка  сообщений.
     Категории  сообщений переупорядочены
     Добавлена  возможность  очистить  сообщения  определенной   категории,   не
     открывая их - на случай переполнения  почтового ящика
@@ -1145,7 +1146,7 @@ Project "SuperNova.WS" Release 30 "Emailing phalanx research antiSSF"
 [@] Сообщения: Переработаны файлы локализации
 [@] Общие: Устаревшая функция SYS_mysqlSmartEscape заменена на соответствующие
 [@] Общие: Устаревшие массивы  $pricelist,  $resources,  $reslist,  $sn_groups,
-    $CombatCaps заменены в коде на $sn_data 
+    $CombatCaps заменены в коде на $sn_data
 [@] Обслуживание: Корректно пересчитывается количество аккаунтов в БД
 
 
@@ -1272,7 +1273,7 @@ Project "SuperNova.WS" Release 29 "Quest messaging"
 [%] JS: Исправлена ошибка в js_timer, приводящая к некорректной работе  таймера
     после таймера с типом "date&time with delta"
 [%] Флоты:   Исправлена  ошибка  обработки  миссии  "Транспорт"  если   планета
-    назначения не существует 
+    назначения не существует
 [%] Флоты: Исправлена  ошибка,  позволяющая  атаковать  в  САБе  более  слабого
     игрока
 [%] Вселенная: Исправлены ошибка  индикации  на  поле  обломков  чужих  летящих
