MOD-feat-34b1: Added support for player_premium v1a3

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34b0#
+Текущая версия #34b1#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -30,7 +30,9 @@
     Имеется 5 уровней премиума
     Премиумный аккаунт дает  бонус,  эквивалентный  своему  уровню,  к  уровням
     технологий и Наемников (не Губернаторов!)  Империи,  а  так  же  к  уровням
-    зданий на планетах
+    следующих зданий на планетах: ко всем шахтам и складам  ресурсов,  ко  всем
+    электростанциям, к Фабрике роботов, к Верфи, к Нанофабрике, к Лаборатории и
+    к Нанолаборатории
     Ник обладателя премиумного аккаунта выделяется в чате отдельным стилем  (по
     умолчанию - желтым цветом)
 
@@ -167,6 +169,11 @@
     Фортификатора и Инженера. Кроме того, бонус Академика увеличен с 5% до 10%,
     а его максимальный уровень - до 30
 [+] MVC: Базовая поддержка MVC
+[+] Постройки/Здания
+    На превьюшках зданий и в информационной панели  дополнительно  отображаются
+    бонусные уровни - включая таблицу расчета производства
+[+] Ресурсы
+    Выводятся бонусные уровни зданий
 
 [~] Альянсы: Немного оптимизирован код страницы Управления Альянсом
 [~] Флоты
@@ -210,6 +217,10 @@
 [~] Обзор планеты
     Переформатирован вывод статуса Ворот для луны
     Убран таймер исследований вследствие его полной бессмысленности
+[~] Юниты/Гравитационная технология
+    Изменены   требования   и   цена:   теперь   для   исследования   требуется
+    Энергетическая  технология  12  уровня,  а  цена  исследования   составляет
+    100.000.000 металла, 100.000.000 кристаллов и 50.000.000 дейтерия
 
 [%] Своз ресурсов: Исправлена ошибка со смещением цветового кодирования емкости
     транспортов на одну строку вниз
@@ -268,6 +279,9 @@
     механизм гарантирует корректную работу с константами в таких  переменных  и
     массивах - даже  тех,  которые  были  только  назначены  при  инициализации
     модуля
+    Конструктор  теперь  поддерживает  загрузку  индексированныъ  элементов   в
+    многоуровневые массивы  типа  sn_data,  включая  использование  констант  в
+    качестве индексов. Подробнее см. в "sn_module.php"
     Теперь  при  инициализации  модуля  в  цепочку  вызовов  функций  корректно
     инсталлируется оригинальная основная функция из движка
 [@] Подсказки: Можно задавать ширину  подсказки  для  согласования  с  основной
