MRK-misc-34b2: Added premium info to infotrader on black market

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34b1#
+Текущая версия #34b2#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -145,7 +145,7 @@
 
 [+] Локализация: Добавлена система отката языков в случае, если включаемый файл
     не найден в указанном месте движка/для указанного языка
-[~] Офицеры: Академик, Фортификатор, Инженер
+[+] Офицеры: Академик, Фортификатор, Инженер
     Теперь Фортификатор добавляет +1 слот к  очереди  постройки  оборонительных
     сооружений за каждый уровень. Вследствие этого фактор Губернатора измененен
     с 1.00 до 1.25. Текущие Фортификаторы остались без изменений
@@ -221,6 +221,7 @@
     Изменены   требования   и   цена:   теперь   для   исследования   требуется
     Энергетическая  технология  12  уровня,  а  цена  исследования   составляет
     100.000.000 металла, 100.000.000 кристаллов и 50.000.000 дейтерия
+[~] Черный Рынок/Инфотрейдер: Добавлена информация об уровне премиума
 
 [%] Своз ресурсов: Исправлена ошибка со смещением цветового кодирования емкости
     транспортов на одну строку вниз
