--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,8 +11,14 @@
 
 
 
-Текущая версия #34b2#
+Текущая версия #34b3#
 ~~~~~~~~~~~~~~~~~~~~~~~
+
+Project "SuperNova.WS" Release 34 RC0 "Happy Birthday Supernova! 3rd anniversary"
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+[!] Юбилей: 3 года назад 11 июня 2009 года был запущен первый сервер того,  что
+    превратилось в Проект "СверхНовая"
+
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
     В  админке  можно  менять  основные   характеристики   планеты:   название,
@@ -143,6 +149,34 @@
 [!] Строительство
     Минимальное время постройки/исследования юнита уменьшено до 1 секунды
 
+[+] Корабли/Технологии
+    Бонус к скорости полета кораблей теперь вычисляется относительно требуемого
+    уровня технологии двигателя. При равной технологии пользователя бонус равен
+    нулю, при  отличной  -  разнице  уровней  между  требованиями  постройки  и
+    пользовательской умноженной на бонус  двигателя.  Если  уровень  технологии
+    пользователя  меньше,  чем  требуемый  уровень  (например,  для   кораблей,
+    купленных на Черном  Рынке),  то  корабль  получает  пенальти  к  скорости,
+    вычисляемое аналогично, но не более 95%
+    Пример.  Бомбардировщик  требует  Ионный  двигатель  6-го  уровня.  Базовая
+    скорость  полета  корабля  -  4.000.  Каждый  уровень   технологии   Ионных
+    двигателей дает 20% к скорости полета. Таким образом:
+      * При  технологии   Ионных  двигателей  8-го   уровня   скорость   полета
+        Бомбардировщика составит:
+          4.000 * (1 + (8 - 6) * (20 / 100)) = 4.000 * (1 + 2 * 0,2) = 5.600
+      * При технологии 6-го уровня - 4.000
+      * При технологии 3-го уровня
+          4.000 * (1 + (3 - 6) * (20 / 100)) = 4.000 * (1 - 3 * 0,2) = 1.600
+      * Без технологии пенальти к уровню будет равно 120%,  поэтому  вступит  в
+        силу ограничение:
+          4.000 * (1 + (0 - 6) * (20 / 100)) = 4.000 * (1 - 0,95) = 200
+    Технологии двигателей теперь  так  же  влияют  на  расход  топлива.  Каждый
+    уровень, выше требуемого, уменьшает расход  топлива  на  10%  от  бонуса  к
+    скорости за уровень, но не больше чем 50% от расхода. Каждый уровень,  ниже
+    требуемого - увеличивает расход на 20% от бонуса.
+    Например, для Бомбардировщика каждый уровень Ионного двигателя,  ниже  6-го
+    будет увеличивать расход  топлива  на  4%  до  12%  при  полном  отсутствии
+    технологии. Каждый уровень, выше 6-го будет уменьшать расход топлива на 2%,
+    вплоть до 25-го уровня, где вступит в силу ограничение.
 [+] Локализация: Добавлена система отката языков в случае, если включаемый файл
     не найден в указанном месте движка/для указанного языка
 [+] Офицеры: Академик, Фортификатор, Инженер
