--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34c0.2#
+Текущая версия #34c1#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 Project "SuperNova.WS" Release 34 RC0 "Happy Birthday Supernova! 3rd anniversary"
@@ -289,6 +289,14 @@ Project "SuperNova.WS" Release 34 RC0 "Happy Birthday Supernova! 3rd anniversary
 [%] Исследования: Исправлена ошибка расчета времени для исследований Альянса  в
     случае, если Альянсу известна технология МИС
 [%] Сообщения: Исправлена ошибка при попытке отправить сообщение без адресата
+[%] Исследования
+    Устранена ошибка  в  формуле  рассчета  скорости  исследования  технологии.
+    Теперь корректно рассчитывается время исследования для игроков и  Альянсов,
+    а так же корректно обрабатывается случай,  когда  у  игрока  нет  ни  одной
+    лаборатории
+    После исправления время исследования увеличится чуть более, чем в два  раза
+    для игроков с МИС,  а  для  игроков  без  МИС  -  упадет  на  один  уровень
+    лаборатории
 
 [@] Документация: readme преобразован в UTF8
 [@] Добавлена компенсация  работы  механизма  Magic  Quotes.  Подробнее  -  см.
