--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,11 +11,11 @@
 
 
 
-Текущая версия #34c1#
+Текущая версия #34d0#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
-Project "SuperNova.WS" Release 34 RC0 "Happy Birthday Supernova! 3rd anniversary"
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Project "SuperNova.WS" Release 34 "Happy Birthday Supernova! 3rd anniversary"
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 [!] Юбилей: 3 года назад 11 июня 2009 года был запущен первый сервер того,  что
     превратилось в Проект "СверхНовая"
 
