--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34d0#
+Текущая версия #35a0#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 Project "SuperNova.WS" Release 34 "Happy Birthday Supernova! 3rd anniversary"
