UNI-fix-35a1: Now impossible to scan deleted planet wiht phalanx

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,8 +11,17 @@
 
 
 
-Текущая версия #35a0#
+Текущая версия #35a1#
 ~~~~~~~~~~~~~~~~~~~~~~~
+
+[+] Добавлен пункт меню "Тёмная материя"
+
+[~] На странице "Тёмная материя" дополнен список возможного использования ТМ  и
+    проставлены ссылки на соответствующие страницы
+
+[%] Фаланга: Теперь нельзя сканировать удаленную планету
+
+
 
 Project "SuperNova.WS" Release 34 "Happy Birthday Supernova! 3rd anniversary"
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
