--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a1#
+Текущая версия #35a2#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [+] Добавлен пункт меню "Тёмная материя"
@@ -20,6 +20,7 @@
     проставлены ссылки на соответствующие страницы
 
 [%] Фаланга: Теперь нельзя сканировать удаленную планету
+[%] Локализация: Исправлена ошибка чтения информации о локализации
 
 
 
