--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a2#
+Текущая версия #35a3#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [+] Добавлен пункт меню "Тёмная материя"
@@ -21,6 +21,8 @@
 
 [%] Фаланга: Теперь нельзя сканировать удаленную планету
 [%] Локализация: Исправлена ошибка чтения информации о локализации
+[%] Альянсы: Исправлена ошибка отображения полей информации Альянса при наличии
+    лого и отсутствии внешнего текста Альянса
 
 
 
