UNI-feat-35a4: Planet teleportation

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,8 +11,26 @@
 
 
 
-Текущая версия #35a3#
+Текущая версия #35a4#
 ~~~~~~~~~~~~~~~~~~~~~~~
+
+[!] Телепортация планеты - новая возможность, доступна на  странице  управления
+    планетой
+    Телепортация может производится только на свободное место - там, где нет ни
+    планет, ни лун, ни обломков, включая уничтоженные объекты
+    Телепортация перемещает  в  новые  координаты  планету  вместе  с  флотами,
+    находящимися на орбите планеты 
+    Если у планеты есть луна - она  так  же  перемещается  в  новые  координаты
+    вместе с флотами
+    Телепортация  невозможна,  если  в  окрестностях  планеты   есть   какая-то
+    активность флотов (т.е. есть флоты, имеющие в  качестве  точки  отправления
+    или назначения саму планету, луну или поле обломков)
+    После телепортации  необходимо  выждать  некоторое  время  перед  следующей
+    телепортацией -  нарушенная  метрика  пространства  вокруг  планеты  должна
+    нормализироваться
+    Стоимость телепортации и таймаут перед следующим прыжком задаются в таблице
+    `config` соответственно переменными 'planet_teleport_cost' (по умолчанию  -
+    50.000 ТМ) и 'planet_teleport_timeout' (по умолчанию - 1 сутки)
 
 [+] Добавлен пункт меню "Тёмная материя"
 
