UNI-feat-35a5: Capital transfer

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a4#
+Текущая версия #35a5#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [!] Телепортация планеты - новая возможность, доступна на  странице  управления
@@ -31,6 +31,11 @@
     Стоимость телепортации и таймаут перед следующим прыжком задаются в таблице
     `config` соответственно переменными 'planet_teleport_cost' (по умолчанию  -
     50.000 ТМ) и 'planet_teleport_timeout' (по умолчанию - 1 сутки)
+[!] Перенос столицы  -  новая  возможность,  доступна  на  странице  управления
+    планетой
+    Теперь любая планета может быть назначена столицей
+    Стоимость переноса столицы по умолчанию составляет 25.000 ТМ. Она  задается
+    в таблице `config` переменной 'planet_capital_cost'
 
 [+] Добавлен пункт меню "Тёмная материя"
 
