--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a5.1#
+Текущая версия #35a6#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [!] Телепортация планеты - новая возможность, доступна на  странице  управления
@@ -38,6 +38,13 @@
     в таблице `config` переменной 'planet_capital_cost'
 
 [+] Добавлен пункт меню "Тёмная материя"
+[+] Обзор Империи: Значительно оптимизирован HTML-код
+    Размер HTML-кода уменьшен на величину от 30% и в отдельных случаях до  80%.
+    Среднему игроку оптимизация даст уменьшение размера загружаемого  файла  на
+    40-50%% (включает так же выигрышь от оптимизации Списка планет - см.ниже)
+[+] Список планет: Значительно оптимизирован HTML-код
+    В Списке планет убрана иконка, отвечающая за исследование вследствие полной
+    бессмысленности
 
 [~] На странице "Тёмная материя" дополнен список возможного использования ТМ  и
     проставлены ссылки на соответствующие страницы
@@ -46,6 +53,7 @@
 [%] Локализация: Исправлена ошибка чтения информации о локализации
 [%] Альянсы: Исправлена ошибка отображения полей информации Альянса при наличии
     лого и отсутствии внешнего текста Альянса
+[%] Вселенная: Исправлена опечатка в легенде
 
 
 
