--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a6#
+Текущая версия #35a7#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [!] Телепортация планеты - новая возможность, доступна на  странице  управления
@@ -48,6 +48,7 @@
 
 [~] На странице "Тёмная материя" дополнен список возможного использования ТМ  и
     проставлены ссылки на соответствующие страницы
+[~] HTTPS: Теперь СН нормально работает и по HTTPS протоколу
 
 [%] Фаланга: Теперь нельзя сканировать удаленную планету
 [%] Локализация: Исправлена ошибка чтения информации о локализации
