SYS-feat-35a8.0: Templates now supports sections. gettemplate() is now cumulative

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,8 @@
 
 
 
-Текущая версия #35a7#
+Текущая версия #35a8.0
+#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [!] Телепортация планеты - новая возможность, доступна на  странице  управления
