SYS-feat-35a8.1: Basic MVC support

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,10 +11,12 @@
 
 
 
-Текущая версия #35a8.0
+Текущая версия #35a8.1
 #
 ~~~~~~~~~~~~~~~~~~~~~~~
 
+[!] MVC
+    Базовая поддержка MVC - встроенная система моделей и видов
 [!] Телепортация планеты - новая возможность, доступна на  странице  управления
     планетой
     Телепортация может производится только на свободное место - там, где нет ни
@@ -46,10 +48,14 @@
 [+] Список планет: Значительно оптимизирован HTML-код
     В Списке планет убрана иконка, отвечающая за исследование вследствие полной
     бессмысленности
+[+] Модули
+    Система модулей переписана с учетом базовой поддержки MVC
+    Автоматическая загрузка языков
 
 [~] На странице "Тёмная материя" дополнен список возможного использования ТМ  и
     проставлены ссылки на соответствующие страницы
 [~] HTTPS: Теперь СН нормально работает и по HTTPS протоколу
+[~] Настройки пользователей: страница переписана с учетом MVC
 
 [%] Фаланга: Теперь нельзя сканировать удаленную планету
 [%] Локализация: Исправлена ошибка чтения информации о локализации
