INT-feat-35a8.3: Global player name rendering engine

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,11 +11,9 @@
 
 
 
-Текущая версия #35a8.2#
+Текущая версия #35a8.3#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
-[!] MVC
-    Базовая поддержка MVC - встроенная система моделей и видов
 [!] Телепортация планеты - новая возможность, доступна на  странице  управления
     планетой
     Телепортация может производится только на свободное место - там, где нет ни
@@ -38,6 +36,12 @@
     Теперь любая планета может быть назначена столицей
     Стоимость переноса столицы по умолчанию составляет 25.000 ТМ. Она  задается
     в таблице `config` переменной 'planet_capital_cost'
+[!] MVC
+    Базовая поддержка MVC - встроенная система моделей и видов
+[!] Рендерер имен
+    Добавлен механизм рендеринга имени пользователя
+    Чат, статистика, Вселенная и страница Императора  теперь  используют  общий
+    механизм рендеринга имени пользователя
 
 [+] Добавлен пункт меню "Тёмная материя"
 [+] Обзор Империи: Значительно оптимизирован HTML-код
