SYS-fix-35a8.5: Fixed error with adding extra resources to planets and unability to turn vacancy mode on

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a8.4#
+Текущая версия #35a8.5#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [!] Телепортация планеты - новая возможность, доступна на  странице  управления
@@ -65,6 +65,9 @@
 [%] Альянсы: Исправлена ошибка отображения полей информации Альянса при наличии
     лого и отсутствии внешнего текста Альянса
 [%] Вселенная: Исправлена опечатка в легенде
+
+[@] js_safe_string() теперь корректно работает со строками,  где  есть  перевод
+    строки
 
 
 
