--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a8.6#
+Текущая версия #35a8.7#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [!] Телепортация планеты - новая возможность, доступна на  странице  управления
@@ -59,6 +59,9 @@
     проставлены ссылки на соответствующие страницы
 [~] HTTPS: Теперь СН нормально работает и по HTTPS протоколу
 [~] Настройки пользователей: страница переписана с учетом MVC
+[~] Император
+    Со страницы убраны баннер и юзербар
+    Страница переделана в preMVC
 
 [%] Фаланга: Теперь нельзя сканировать удаленную планету
 [%] Локализация: Исправлена ошибка чтения информации о локализации
@@ -67,7 +70,12 @@
 [%] Вселенная: Исправлена опечатка в легенде
 
 [@] js_safe_string() теперь корректно работает со строками,  где  есть  перевод
-    строки
+    строки, включая Линуксовские и Маковские форматы файлов
+[@] Темплейты
+    Рендерер страницы теперь подхватывает заголовок страницы, если  он  есть  -
+    переменная PTL {PAGE_HEADER}
+[@] Почти везде из текста убраны ссылки на переменную  $GLOBALS  для  поддержки
+    рефакторинга в IDE
 
 
 
