MOD-misc-35a8.8: Changes in loading sequence and locale support by modules

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a8.7#
+Текущая версия #35a8.8#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [!] Телепортация планеты - новая возможность, доступна на  странице  управления
@@ -1037,7 +1037,7 @@ Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
     Все таймеры врат заменены на sn_timer
 [!] Экономика: ТМ смасштабирована в отношении 1 к 1000. Т.е. весь приход  ТМ  и
     все цены в ТМ увеличены в 1000 раз
-[!] Темная Материя: За исследования начисляются опыт,  за  опыт  -  уровни,  за
+[!] Тёмная Материя: За исследования начисляются опыт,  за  опыт  -  уровни,  за
     уровни - ТМ. Таблица необходимого опыта  для  набора  уровней  эквивалентна
     таблице опыта  за  постройки  (см.  /docs/readme.txt).  За  каждый  уровень
     начисляется 1000 ТМ
@@ -1257,7 +1257,7 @@ Project "SuperNova.WS" Release 30 "Emailing phalanx research antiSSF"
 [%] Обслуживание: Исправлена ошибка при обслуживании таблицы Альянсов
 [%] Локализация/Английский: Исправлены баги в локализации
 
-[@] Логи: Изменения темной материи  вынесены  из  глобального  лога в отдельную
+[@] Логи: Изменения Тёмной Материи  вынесены  из  глобального  лога в отдельную
     таблицу. Это  существенно  облегчило  поиск  неисправностей  на  сервере  и
     подозрительных действий пользователей. Старые записи перенесены в отдельную
     таблицу
@@ -1846,7 +1846,7 @@ Project "SuperNova.WS" Release 26 - Speed It Up! (2011-02-07 13:02)
     человеком; добавлено поле с  дампом  переменных  для  дальнейшего  разбора.
     Старые таблицы сохранены соответственно как `errors_backup` и `logs_backup`
 [@] Изменены коды  операции  со  статистикой.  Раньше  код  102  пересекался  с
-    операцией "изменение темной материи"
+    операцией "изменение Тёмной Материи"
 [@] Добавлена   обработка  ситуации,  когда  после  установки  движок   сначала
     запустили на пустой базе, а только затем залили в неё дамп
 [@] Вселенная: Добавлена обработка исключительной ситуации, когда у планеты нет
