--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a8.8#
+Текущая версия #35a8.9#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [!] Телепортация планеты - новая возможность, доступна на  странице  управления
@@ -68,6 +68,7 @@
 [%] Альянсы: Исправлена ошибка отображения полей информации Альянса при наличии
     лого и отсутствии внешнего текста Альянса
 [%] Вселенная: Исправлена опечатка в легенде
+[%] Локализация: Небольшая правка опечаток в русской локализации
 
 [@] js_safe_string() теперь корректно работает со строками,  где  есть  перевод
     строки, включая Линуксовские и Маковские форматы файлов
@@ -76,6 +77,13 @@
     переменная PTL {PAGE_HEADER}
 [@] Почти везде из текста убраны ссылки на переменную  $GLOBALS  для  поддержки
     рефакторинга в IDE
+[@] Модули
+    Теперь можно указывать  в  качестве  страницы  загрузки  файла  локализации
+    пустое множество '' - файлы в этом массиве будут загружаться всегда
+[@] Инициализация
+    Изменена процедура инициализации  -  модули  теперь  грузятся  до  проверки
+    наличия  страниц.  Это  сделано  на  случай,  если  модуль  добавляет  свои
+    собственные страницы как, например, модуль Премиума и модуль Рас
 
 
 
