--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a8.9#
+Текущая версия #35a8.10#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [!] Телепортация планеты - новая возможность, доступна на  странице  управления
@@ -84,6 +84,10 @@
     Изменена процедура инициализации  -  модули  теперь  грузятся  до  проверки
     наличия  страниц.  Это  сделано  на  случай,  если  модуль  добавляет  свои
     собственные страницы как, например, модуль Премиума и модуль Рас
+[@] Содержимое переменной $template_result автоматически загружаетя в  темплейт
+    в файле index.php
+[@] Файл темплейта _result_message автоматически  подгружается  при  рендеринге
+    темплейта, если в структуре переменных темплейта есть массив 'result'
 
 
 
