DOC-35a8.12: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,8 +11,24 @@
 
 
 
-Текущая версия #35a8.10#
+Текущая версия #35a8.12#
 ~~~~~~~~~~~~~~~~~~~~~~~
+
+[#] Модули: Расы
+    Шесть фиксированных рас: земляне, луниты, меркурианцы, венериане, марсиане,
+    республиканцы
+    Иконка расы отображается в чате,  в  статистике,  в  попапе  информации  об
+    игроке во Вселенной и на странице Императора. Удержание курсора над иконкой
+    расы вызывает тултип с её названием. Клик - открывает страницу с  описанием
+    всех рас
+    Каждая раса имеет собственные бонусы. Бонусы рас действуют сразу  же  после
+    выбора родного мира - не нужно, например, исследовать техи, что бы получить
+    к ним бонус
+    Раса выбирается после регистрации на странице Императора
+    Первый выбор расы производится бесплатно, каждая смена расы  стоит  100.000
+    ТМ
+    Описание текущей расы доступно на странице Императора. Там же  есть  ссылка
+    на описание всех рас в игре с указанием их символов
 
 [!] Телепортация планеты - новая возможность, доступна на  странице  управления
     планетой
