CHT-misc-35a8.16: Increased username field length in chat

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a8.12#
+Текущая версия #35a8.16#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
@@ -78,6 +78,8 @@
 [~] Император
     Со страницы убраны баннер и юзербар
     Страница переделана в preMVC
+[~] Чат
+    Увеличена длина поля для ника в чате
 
 [%] Фаланга: Теперь нельзя сканировать удаленную планету
 [%] Локализация: Исправлена ошибка чтения информации о локализации
