MOD-feat-35a8.21: Module dependencies and automatic sort-load functionality

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a8.19#
+Текущая версия #35a8.21#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
@@ -106,6 +106,10 @@
     в файле index.php
 [@] Файл темплейта _result_message автоматически  подгружается  при  рендеринге
     темплейта, если в структуре переменных темплейта есть массив 'result'
+[@] Модули
+    Поддержка  дерева  зависимости  модулей  -  теперь  можно  делать   модули,
+    зависящие от других модулей
+    Автоматическая загрузка зависимых модулей в правильном порядке
 
 
 
