UBE-misc-35a9.5: Removed unused rapidfire code

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a9.4#
+Текущая версия #35a9.5#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
@@ -80,6 +80,9 @@
     Страница переделана в preMVC
 [~] Чат
     Увеличена длина поля для ника в чате
+[~] UBEv3: Улучшена поддержка залпового огня
+[~] Новапедия: Корабли и оборона
+    Улучшено отображение информации о кораблях и обороне
 
 [%] Фаланга: Теперь нельзя сканировать удаленную планету
 [%] Локализация: Исправлена ошибка чтения информации о локализации
@@ -110,6 +113,7 @@
     Поддержка  дерева  зависимости  модулей  -  теперь  можно  делать   модули,
     зависящие от других модулей
     Автоматическая загрузка зависимых модулей в правильном порядке
+[@] Убран неиспользуемый код "скорострела"
 
 
 
