SYS-misc-35a9.6: Some work on vars.php

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a9.5#
+Текущая версия #35a9.6#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
@@ -114,6 +114,13 @@
     зависящие от других модулей
     Автоматическая загрузка зависимых модулей в правильном порядке
 [@] Убран неиспользуемый код "скорострела"
+[@] Из файла vars.php выделены три  отдельных  файла  со  структурами,  боевыми
+    юнитами и всеми остальными
+    Так же добавлена дополнительная служебная информация для  того,  что  бы  в
+    симуляторе не пропадали защитные сооружения  при  добавлении  новых  юнитов
+    через модули
+    Убраны неиспользуемые данные "скорострела"
+[@] Исправлена очепятка в названии константы технологии ионного двигателя
 
 
 
