SYS-misc-35a9.7: More work on vars.php

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a9.6#
+Текущая версия #35a9.7#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
@@ -120,7 +120,8 @@
     симуляторе не пропадали защитные сооружения  при  добавлении  новых  юнитов
     через модули
     Убраны неиспользуемые данные "скорострела"
-[@] Исправлена очепятка в названии константы технологии ионного двигателя
+    Из информации о боевых юнитов убраны ненужные данные о единичных усилениях
+    [@] Исправлена очепятка в названии константы технологии ионного двигателя
 
 
 
