--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a9.7#
+Текущая версия #35a9.8#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
@@ -83,6 +83,13 @@
 [~] UBEv3: Улучшена поддержка залпового огня
 [~] Новапедия: Корабли и оборона
     Улучшено отображение информации о кораблях и обороне
+[~] Флот: небольшой ребаланс кораблей
+    Сверхновая - атака уменьшена на  порядок.  При  этом  боевая  эффективность
+    корабля изменилось незначительно, благодаря изменению коэфициента  усиления
+    залпа. Немного уменьшилась эффективность против наземной обороны  и  легких
+    кораблей и увеличилась эффективность против средних кораблей
+    Бомбардировщик: понижена эффективность против ионных орудий  и  повышена  -
+    против плазменных
 
 [%] Фаланга: Теперь нельзя сканировать удаленную планету
 [%] Локализация: Исправлена ошибка чтения информации о локализации
