--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -2,7 +2,7 @@
 Обозначения
 ~~~~~~~~~~~
 [#] Модуль, не входящий в публичную версию/Private module
-[!] Нововведения/New features
+[!] Нововведение или важное изменение/New features or important change
 [+] Добавлено/New functions
 [~] Изменено/Changed functions
 [%] Исправление - багфикс/Bugfixes
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a9.9#
+Текущая версия #35a9.10#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
@@ -58,6 +58,18 @@
     Добавлен механизм рендеринга имени пользователя
     Чат, статистика, Вселенная и страница Императора  теперь  используют  общий
     механизм рендеринга имени пользователя
+[!] МПР - изменение алгоритма ракетного удара
+    Алгоритм  ракетного  удара  теперь  не  привязан  к   численным   значениям
+    идентификаторов юнитов и сильно оптимизирован по скорости
+    Теперь при атаке МПР учитываются  щиты  оборонных  сооружений.  Это  должно
+    слегка  уменьшить  эффективность  ракет  и  повысить   живучесть   защитных
+    сооружений с большим количеством щитов
+    Теперь при ракетном ударе рандомизируются параметры атаки, брони и щитов  у
+    соответствующих юнитов. Границы такие же, как и для сражений  флотов  -  от
+    80% до 120%
+    В результате изменений в алгоритме существенно повысилась живучесть ПЗ  при
+    ракетном ударе
+    Добавлена поддержка усиления залпа для МПР
 
 [+] Добавлен пункт меню "Тёмная материя"
 [+] Обзор Империи: Значительно оптимизирован HTML-код
@@ -90,6 +102,8 @@
     кораблей и увеличилась эффективность против средних кораблей
     Бомбардировщик: понижена эффективность против ионных орудий  и  повышена  -
     против плазменных
+[~] Вселенная: Интерфейс запуска ракет использует группу защитных сооружений, а
+    не хард-кодед перечень, как было раньше
 
 [%] Фаланга: Теперь нельзя сканировать удаленную планету
 [%] Локализация: Исправлена ошибка чтения информации о локализации
@@ -128,7 +142,9 @@
     через модули
     Убраны неиспользуемые данные "скорострела"
     Из информации о боевых юнитов убраны ненужные данные о единичных усилениях
-    [@] Исправлена очепятка в названии константы технологии ионного двигателя
+[@] Исправлена очепятка в названии константы технологии ионного двигателя
+[@] Система: Численные значения для защитных сооружений и ракет заменены  везде
+    на константы
 
 
 
