--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a9.10#
+Текущая версия #35a9.11#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
@@ -93,8 +93,7 @@
 [~] Чат
     Увеличена длина поля для ника в чате
 [~] UBEv3: Улучшена поддержка залпового огня
-[~] Новапедия: Корабли и оборона
-    Улучшено отображение информации о кораблях и обороне
+[~] Новапедия: Улучшено отображение информации о кораблях и обороне
 [~] Флот: небольшой ребаланс кораблей
     Сверхновая - атака уменьшена на  порядок.  При  этом  боевая  эффективность
     корабля изменилось незначительно, благодаря изменению коэфициента  усиления
